# usdinspect

./: .gitignore  README.md  pyproject.toml
data/usd/: download_pixar_kitchen_set  time_samples.usd
data/usd/composition_arcs_example/sublayer/: sphere.usd  sphere_transform.usd  sublayer_example.usd
src/python/usdinspect/: app.py  log.py  main.py  usd_utils.py  values_table.py  widgets.py
src/python/usdinspect/ui/: style.tcss
