[project]
name = "usdinspect"
version = "0.1.0"
description = "A tool for inspecting USD files."
readme = "README.md" 
authors = [{ name = "Jaime Florian Urueta", email = "jaimeflorian27@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
"textual==0.86.*",
"usd-core==24.*"
]

[project.scripts]
usdinspect = "usdinspect.main:run"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "types-usd",
    "textual-dev==0.86.*"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["usdinspect*"]

[tool.pytest]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY001", "FBT001", "FBT002", "PLR0913", "PLR0917"]
